trying to fix jumpy scrolling on ios

--- a/wp-content/themes/digital-pro/custom-styles.css
+++ b/wp-content/themes/digital-pro/custom-styles.css
@@ -1,3 +1,5 @@
+
+html, body {margin:0; padding:0; box-sizing: border-box;}
 /* Typography begin */
 
 h1, h2, h3, h4, h5, h6 {
